<resources>
    <string name="app_name">AsanaRebelTask</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="click_to_load">Click the button to load list of repositories</string>
    <string name="no_repos">No repos for this user</string>
    <string name="no_subscribers">No subscribers found for current repo</string>
    <string name="search_hint">Github username</string>
    <string name="total_subscribers">Total Subscribers :</string>
</resources>
